Date filter issue fixed